Add ACL generator and Solr documentation (#1005)